# api-for-business

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 507734bff130_initial.py  7ea8c14d77b9_изменена_колонка_со_временем_регистрации.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  router.py  routes.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 07b44bd90de8_.py  36efbddc2395_.py  4efe1997880c_.py  70ebcec90e63_.py  93f1d4731e01_.py  af66f3799858_.py  e7f743503b6c_.py  e9033059b3d8_.py
src/static/: index.html
src/users_info/: models.py  service.py
